# mgm_bet_case

./: Processing.ipynb  README.md  mgm case report.pbix  pyproject.toml
Files/: ExchangeRate.csv  Game.csv  GameCategory.csv  GameProvider.csv  GameTransaction.csv  PaymentTransaction.csv  Player.csv  hourly_metrics.csv  player_metrics.csv
Transformed Files/: hourly_metrics.xlsx
