[tool.poetry]
name = "mgm-case-duckdb"
version = "0.1.0"
description = ""
authors = ["theo_lourencao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
